--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <div id="img-div"><img src="./images/LogoMakr-7AHbTX.png" alt=""></div>
     <nav>
       <ul>
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">MENU</a></li>
+        <li><a href="./index.html">HOME</a></li>
+        <li><a href="./menu.html">MENU</a></li>
         <li><a href="#">ORDER</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">CONTACT</a></li>
+        <li><a href="./contact.html">CONTACT</a></li>
       </ul>
     </nav>
   </header>
@@ -41,7 +40,7 @@
             <p>Lorem ipsum, dolor sit</p>
           </div>
         </div>
-        <button class="bg-red-400 block m-auto cursor-pointer p-4 hover:bg-red-300 text-red-900 text-2xl">Order now</button>
+        <a href="./menu.html" class="bg-red-400  w-64 block m-auto text-center cursor-pointer p-4 hover:bg-red-300 text-red-900 text-2xl">Order now</a>
       </div>
       </div>
   </section>
@@ -51,7 +50,7 @@
       <p>Oke Odo, University Rd</p>
       <p>Ilorin, Kwara State</p>
     </div>
-    <div id="map">
+    <div class="map">
       <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d246.63707145379217!2d4.628801420331022!3d8.48059232382668!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10364dc7259a73cd%3A0x87b8dfc88997bacf!2sItem%207!5e0!3m2!1sen!2sng!4v1609093076022!5m2!1sen!2sng" 
         ></iframe></p>
         <!-- frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" width="400" height="450" -->
