--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Item 7 | Home</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
   <section id="land">
   <header>
     <div id="img-div"><img src="./images/LogoMakr-7AHbTX.png" alt=""></div>
-    <nav>
-      <ul>
-        <li><a href="./index.html">HOME</a></li>
+    <div class="menu-btn">
+      <div class="menu-lines"></div>
+    </div>
+      <ul class="menu-items">
+        <li><a class="active" href="./index.html">HOME</a></li>
         <li><a href="./menu.html">MENU</a></li>
         <li><a href="#">ORDER</a></li>
         <li><a href="./contact.html">CONTACT</a></li>
       </ul>
-    </nav>
   </header>
     <div class="h2-div">
       <h2>ITEM 7, ILORIN</h2>
@@ -53,8 +55,9 @@
     <div class="map">
       <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d246.63707145379217!2d4.628801420331022!3d8.48059232382668!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10364dc7259a73cd%3A0x87b8dfc88997bacf!2sItem%207!5e0!3m2!1sen!2sng!4v1609093076022!5m2!1sen!2sng" 
         ></iframe></p>
-        <!-- frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" width="400" height="450" -->
+        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" width="400" height="450"
     </div>
   </footer>
+  <script src="./main.js"></script>
 </body>
 </html>
