--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
       <ul class="menu-items">
         <li><a href="./index.html">HOME</a></li>
         <li><a href="./menu.html">MENU</a></li>
-        <li><a href="#">ORDER</a></li>
+        <li><a href="./order.html">ORDER</a></li>
         <li><a class="active" href="./contact.html">CONTACT</a></li>
       </ul>
   </header>
