--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul class="menu-items">
         <li><a class="active" href="./index.html">HOME</a></li>
         <li><a href="./menu.html">MENU</a></li>
-        <li><a href="#">ORDER</a></li>
+        <li><a href="./order.html">ORDER</a></li>
         <li><a href="./contact.html">CONTACT</a></li>
       </ul>
   </header>
