cart finally resolved

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/adf7b7b7c4.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./main.js" defer></script>
+    <script src="./app.js" defer></script>
   </head>
   <body>
     <header>
