--- a/menu.html
+++ b/menu.html
@@ -98,6 +98,6 @@
         <p>Ilorin, Kwara State</p>
       </div>
     </footer>
-    <script src="./main.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
