--- a/order.html
+++ b/order.html
@@ -82,7 +82,7 @@
       </div>
         <div class="quantity">
           <p>Quantity:</p>
-          <input class="quantities"  type="number">
+          <input class="quantities" type="number">
         </div>
         </label>
       </div>
@@ -92,6 +92,7 @@
       </div>
       </div>
       </section>
-  <script src="main.js"></script>
+  <!-- <script src="main.js"></script> -->
+  <script src="./app.js"></script>
 </body>
 </html>
