--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
         ></iframe></p>
     </div>
   </footer>
-  <script src="./main.js"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
