--- a/order.html
+++ b/order.html
@@ -6,6 +6,10 @@
   <title>Item 7 | Order</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="styles.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
